--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 <main>
 <section class="calculate-container">
-    <label id='initial'>Начальная сумма вклада (₽)<input type='text'></label>
-    <label id='minthly'>Сумма ежемесячного пополнения (₽)<input type='text'></label>
-    <label id='percent'>Процентная ставка (%)<input type='text'></label>
-    <label id='time'>Срок вклада (дней)<input type='text'></label>
+    <label >Начальная сумма вклада (₽)<input id='initial' type='text'></label>
+    <label>Сумма ежемесячного пополнения (₽)<input id='monthly' type='text'></label>
+    <label>Процентная ставка (%)<input id='percent' type='text'></label>
+    <label>Срок вклада (дней)<input id='time' type='text'></label>
     <button id='calculate'>Рассчитать</button>
 </section>
 </main>
