--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 <main>
 <section class="calculate-container">
-    <label >Начальная сумма вклада (₽)<input id='initial' type='text'></label>
-    <label>Сумма ежемесячного пополнения (₽)<input id='monthly' type='text'></label>
-    <label>Процентная ставка (%)<input id='percent' type='text'></label>
-    <label>Срок вклада (дней)<input id='time' type='text'></label>
+    <label >Начальная сумма вклада (₽)<input id='initial' type='text' placeholder='Введите изначальную сумму вклада'></label>
+    <label>Сумма ежемесячного пополнения (₽)<input id='monthly' type='text' placeholder='Введите сумму ежемесячного пополнения'></label>
+    <label>Процентная ставка (%)<input id='percent' type='text' placeholder='Введите процентную ставку от 1 до 100'></label>
+    <label>Срок вклада (дней)<input id='time' type='text' placeholder='Введите срок вклада в днях'></label>
     <button id='calculate'>Рассчитать</button>
 </section>
 </main>
