--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 <main>
 <section class="calculate-container">
-    <label >Начальная сумма вклада (₽)<input id='initial' type='text' placeholder='Введите изначальную сумму вклада'></label>
-    <label>Сумма ежемесячного пополнения (₽)<input id='monthly' type='text' placeholder='Введите сумму ежемесячного пополнения'></label>
-    <label>Процентная ставка (%)<input id='percent' type='text' placeholder='Введите процентную ставку от 1 до 100'></label>
-    <label>Срок вклада (дней)<input id='time' type='text' placeholder='Введите срок вклада в днях'></label>
+    <div class='field'><label for='initial'>Начальная сумма вклада (₽)</label><input id='initial' type='text' placeholder='Введите изначальную сумму вклада'></div>
+    <div class='field'><label for='monthly'>Сумма ежемесячного пополнения (₽)</label><input id='monthly' type='text' placeholder='Введите сумму ежемесячного пополнения'></div>
+    <div class='field'><label for='percent'>Процентная ставка (%)</label><input id='percent' type='text' placeholder='Введите процентную ставку от 1 до 100'></div>
+    <div class='field'><label for='time'>Срок вклада (дней)</label><input id='time' type='text' placeholder='Введите срок вклада в днях'></div>
     <button id='calculate'>Рассчитать</button>
 </section>
 </main>
