--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <header>
+        <img class="logo" src="https://www.pashabank.ge/m/i/logos/logo-vertical-en.png" alt="Логотип">
+    </header>
     <main>
         <section class="calculate-container">
             <h1>Форма рассчета банковского вклада</h1>
