--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class='field'><label for='time'>Срок вклада (дней)</label><input id='time' type='text'
                     placeholder='Введите срок вклада в днях'></div>
             <button id='calculate'>Рассчитать</button>
+            <div id='error'></div>
         </section>
     </main> 
     <script src='./script.js'></script>
